--- a/src/api/GoogleReviews/uwsgi.ini
+++ b/src/api/GoogleReviews/uwsgi.ini
@@ -8,7 +8,7 @@ processes=8
 threads=4
 
 # Django's wsgi file
-module=CyCarrier.wsgi:application
+module=GoogleReviews.wsgi:application
 
 # clear environment on exit
 vacuum          = true
